--- a/format.css
+++ b/format.css
@@ -18,7 +18,7 @@ html, body {
     text-transform: uppercase;
     letter-spacing: 1.3px;
     font-weight: 700;
-    color: #313133;
+    color: #000000;
     background: #d14f4f;
     background: linear-gradient(90deg, rgb(196, 44, 44) 0%, rgb(194, 0, 0) 100%);
     border: none;
@@ -88,7 +88,7 @@ html, body {
 
 body{
     text-align: center;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
 }
 img{
     width: 15%;
@@ -99,11 +99,9 @@ a{
 }
 
 .all{
-    color: white;
+    color: rgb(255, 255, 255);
     margin-left: auto;
     margin-right: auto;
     margin-top: 12%;
     width: 45%;
-}
-.nom{
 }
