--- a/style.css
+++ b/style.css
@@ -25,18 +25,24 @@
     justify-content: center;
     margin-left: auto;
     margin-right: auto;   
+    margin-bottom: 0%;
 }
 
 body{
+    /* border: lawngreen solid; */
     background-color: black;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+    
+    overflow: hidden;
 }
 
 .gauche{
     /* border: magenta solid; */
     width: 40%;
+    margin-left: auto;
+    margin-right: auto;
     overflow-x: auto;
 }
 
@@ -46,4 +52,5 @@ body{
     border-left: red solid;
     margin-left: auto;
     margin-right: auto;
+    overflow-x: auto;
 }
