--- a/format.css
+++ b/format.css
@@ -4,7 +4,7 @@ html, body {
   }
   
   .wrap {
-    height: 100%;
+    height: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -18,9 +18,9 @@ html, body {
     text-transform: uppercase;
     letter-spacing: 1.3px;
     font-weight: 700;
-    color: #000000;
-    background: #d14f4f;
-    background: linear-gradient(90deg, rgb(196, 44, 44) 0%, rgb(194, 0, 0) 100%);
+    color: #ffffff;
+    background: #ff0000;
+    background: linear-gradient(90deg, rgb(119, 0, 0) 0%,rgb(255,0,0) 50%, rgb(119, 0, 0) 100%);
     border: none;
     border-radius: 1000px;
     transition: all 0.3s ease-in-out 0s;
@@ -31,23 +31,21 @@ html, body {
     }
   
   button::before {
-  content: '';
+    content: '';
     border-radius: 1000px;
     min-width: calc(300px + 12px);
     min-height: calc(60px + 12px);
     border: 6px solid #ff0000;
-    box-shadow: 0 0 60px rgba(180, 0, 0, 0.64);
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     opacity: 0;
-    transition: all .3s ease-in-out 0s;
+    transition: all 1s ease-in-out 0s;
   }
   
   .button:hover, .button:focus {
-    color: #000000;
-    transform: translateY(-6px);
+    color: #ffffff;
   }
   
   button:hover::before, button:focus::before {
@@ -56,15 +54,15 @@ html, body {
   
   button::after {
     content: '';
-    width: 30px; height: 30px;
+    width: 300px; height: 300px;
     border-radius: 100%;
-    border: 6px solid #ff0000;
+    border: 6px solid #ffffff;
     position: absolute;
     z-index: -1;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    animation: ring 1.5s infinite;
+    animation: ring 3s infinite;
   }
   
   button:hover::after, button:focus::after {
@@ -76,7 +74,7 @@ html, body {
     0% {
       width: 30px;
       height: 30px;
-      opacity: 1;
+      opacity: 2;
     }
     100% {
       width: 300px;
