--- a/format.css
+++ b/format.css
@@ -12,7 +12,7 @@ html, body {
   
   .button {
     min-width: 300px;
-    min-height: 60px;
+    min-height: 20px;
     font-family: 'Nunito', sans-serif;
     font-size: 22px;
     text-transform: uppercase;
@@ -30,11 +30,11 @@ html, body {
     padding: 10px;
     }
   
-  button::before {
+  #button::before {
     content: '';
     border-radius: 1000px;
     min-width: calc(300px + 12px);
-    min-height: calc(60px + 12px);
+    min-height: calc(20px + 12px);
     border: 6px solid #ff0000;
     position: absolute;
     top: 50%;
@@ -48,11 +48,11 @@ html, body {
     color: #ffffff;
   }
   
-  button:hover::before, button:focus::before {
+  #button:hover::before, #button:focus::before {
     opacity: 1;
   }
   
-  button::after {
+  #button::after {
     content: '';
     width: 300px; height: 300px;
     border-radius: 100%;
@@ -65,7 +65,7 @@ html, body {
     animation: ring 3s infinite;
   }
   
-  button:hover::after, button:focus::after {
+  #button:hover::after, button:focus::after {
     animation: none;
     display: none;
   }
