--- a/format.css
+++ b/format.css
@@ -1,3 +1,5 @@
+/* cette partie permet de gérer le boutton de la page "index" */
+
 html, body {
     height: 100%;
     overflow-y: hidden;
@@ -10,6 +12,7 @@ html, body {
     justify-content: center;
   }
   
+  /* partie pour le boutton en lui-même(taille,couleur,position...) */
   .button {
     min-width: 300px;
     min-height: 20px;
@@ -20,7 +23,7 @@ html, body {
     font-weight: 700;
     color: #ffffff;
     background: #ff0000;
-    background: linear-gradient(90deg, rgb(119, 0, 0) 0%,rgb(255,0,0) 50%, rgb(119, 0, 0) 100%);
+    background: linear-gradient(90deg, rgb(119, 0, 0) 0%,rgb(255,0,0) 50%, rgb(119, 0, 0) 100%); 
     border: none;
     border-radius: 1000px;
     transition: all 0.3s ease-in-out 0s;
@@ -30,6 +33,7 @@ html, body {
     padding: 10px;
     }
   
+    /* permet l'annimation lorsque l'on passe la souris sur le boutton */
   #button::before {
     content: '';
     border-radius: 1000px;
@@ -52,6 +56,7 @@ html, body {
     opacity: 1;
   }
   
+  /* permet l'annimation du boutton en cercle */
   #button::after {
     content: '';
     width: 300px; height: 300px;
@@ -65,11 +70,13 @@ html, body {
     animation: ring 3s infinite;
   }
   
+  /* arrete l'annimation lors du passage de la souris */
   #button:hover::after, button:focus::after {
     animation: none;
     display: none;
   }
   
+  /* paramètres du cercle(taille, couleur, point de départ...) */
   @keyframes ring {
     0% {
       width: 30px;
@@ -84,6 +91,7 @@ html, body {
   }
 
 
+/* cette partie s'occupe de la page "page_cv", du texte et des images de la page "index" */
 body{
     text-align: center;
     background-color: rgb(0, 0, 0);
@@ -123,6 +131,7 @@ a{
   opacity: 0.5;
 }
 
+/* le conteneur sert a joindre les deux parties de la "page_cv", celui-ci étant séparer en deux parties */
 .conteneur{
   background-color: lightgray;
   width: 50%;
@@ -142,6 +151,7 @@ body{
   overflow-y: hidden;
 }
 
+/* informations à gauche de la page */
 .gauche{
   width: 40%;
   margin-left: auto;
@@ -149,6 +159,7 @@ body{
   overflow-x: auto;
 }
 
+/* informations à droite de la page */
 .droite{
   width: 50%;
   border-left: red solid;
@@ -157,6 +168,7 @@ body{
   overflow-x: auto;
 }
 
+/* affichage des barres de compétences */
 .pourcentages {
   width: 100%;
   background-color: #ddd;
